[metadata]
name = ptpt
version = 0.0.4
author = Alex McKinney
author_email = alexander.f.mckinney@durham.ac.uk
description = PyTorch Personal Trainer: My personal framework for deep learning experiments
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vvvm23/ptpt
keywords = artificial intelligence, deep learning, pytorch
license = MIT License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    torch
    rich
python_requires = >=3.8

[options.packages.find]
exclude = 
    examples
